feat: add i18n runtime support with URL prefix locale routing
- Create @canmi/seam-i18n package (translation lookup, interpolation, fallback)
- Rename packages/eslint-plugin-seam to packages/eslint (package name unchanged)
- Server runtime: locale extraction from URL prefix (/zh/dashboard/alice),
  locale-specific template selection via localeTemplates, _i18n injection
  into __SEAM_DATA__, and <html lang> attribute
- Build pipeline: replace embedded <script id="__seam_i18n"> with exported
  locales/{locale}.json files read by server at startup
- Client: useT() supports interpolation params, SeamDataBridge reads _i18n
  from __SEAM_DATA__ with fallback to deprecated script tag
- Demo locale files renamed from origin to en, seam.toml configs updated

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@canmi/eslint-plugin-seam",
-  "version": "0.3.1",
-  "description": "ESLint rules for SeamJS skeleton components",
+  "name": "@canmi/seam-i18n",
+  "version": "0.3.2",
   "files": [
     "dist"
   ],
@@ -17,12 +16,8 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "eslint": "^10.0.0",
     "tsdown": "^0.20.0",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
-  },
-  "peerDependencies": {
-    "eslint": ">=9"
   }
 }
