feat: add i18n_keys collection and version hashing to build pipeline
Track A (Rust): compute per-locale content hashes (i18n.versions) in
route manifest; propagate i18n_keys from skeleton output through
process_routes to manifest entries.

Track B (TS): move I18nProvider/useT/useLocale from @canmi/seam-react
to @canmi/seam-i18n/react; skeleton renderer tracks t() calls via
_usedKeys proxy; esbuild externals include @canmi/seam-i18n to avoid
React context duplication.

Fixes: demo apps missing @canmi/seam-i18n dependency; esbuild bundling
@canmi/seam-i18n/react caused separate context instances making key
tracking always empty.

--- a/examples/github-dashboard/seam-app/locales/en.json
+++ b/examples/github-dashboard/seam-app/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "dashboard.title": "GitHub Dashboard",
+  "dashboard.cta": "View",
   "dashboard.tagline": "Compile-Time Rendering for React",
-  "dashboard.cta": "View"
+  "dashboard.title": "GitHub Dashboard"
 }
