feat: ASCII-escape non-ASCII in i18n JSON output, stop modifying source files
Remove sort_i18n_source_files which mutated developer-owned locale JSON
during build. Add ascii_escape_json to Rust/TS/Go runtimes so all three
servers output \uXXXX escapes in __SEAM_DATA__ script tags, ensuring
charset-independent HTML. Build output (locales/*.json) also uses ASCII
escapes via the same Rust function.

--- a/examples/github-dashboard/seam-app/locales/en.json
+++ b/examples/github-dashboard/seam-app/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "dashboard.cta": "View",
+  "dashboard.title": "GitHub Dashboard",
   "dashboard.tagline": "Compile-Time Rendering for React",
-  "dashboard.title": "GitHub Dashboard"
+  "dashboard.cta": "View"
 }
