--- a/examples/github-dashboard/seam-app/locales/zh.json
+++ b/examples/github-dashboard/seam-app/locales/zh.json
@@ -1,5 +1,5 @@
 {
-  "dashboard.cta": "查看",
-  "dashboard.tagline": "编译时渲染 React",
-  "dashboard.title": "GitHub 仪表盘"
+  "dashboard.title": "GitHub \u4eea\u8868\u76d8",
+  "dashboard.tagline": "\u7f16\u8bd1\u65f6\u6e32\u67d3 React",
+  "dashboard.cta": "\u67e5\u770b"
 }
