feat: add configurable locale resolve strategy and client storage
Add ResolveLocaleFn with default chain (URL prefix -> cookie -> Accept-Language
-> default locale) across all three server backends (TS, Go, Rust). Each backend
resolves locale inline with framework-native header access. Adapters pass request
headers to the HTTP handler. Client-side storage utilities (cookie + localStorage)
with locale change events added to @canmi/seam-i18n/storage.

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@canmi/seam-i18n",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "files": [
     "dist"
   ],
@@ -13,6 +13,10 @@
     "./react": {
       "types": "./dist/react.d.ts",
       "import": "./dist/react.js"
+    },
+    "./storage": {
+      "types": "./dist/storage.d.ts",
+      "import": "./dist/storage.js"
     }
   },
   "scripts": {
